[package]
name = "littlealchemy2-cheat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[[example]]
name = "build-binary"
path = "src/build_binary.rs"

[[example]]
name = "build-book"
path = "src/build_book.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[lints.clippy]
all = "warn"
pedantic = "warn"

[lints.rust]
missing_docs = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"
missing_crate_level_docs = "warn"
private_doc_tests = "warn"
unescaped_backticks = "warn"
